feat: user application api
